[update] added header styling and fixed z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,16 @@ body {
 }
 
 main {
-  padding:5% 0;
+  padding:8% 0;
 }
 
 /* Utility  */
 img {
   max-width: 100%;
+}
+
+ul {
+  list-style: none;
 }
 
 .container {
@@ -48,11 +52,13 @@ img {
   opacity:0;
   transition: opacity 0.3s ease; /* Aggiungi una transizione */
 }
-
+/* Element Styling  */
 header {
   position:fixed;
   width:100%;
   background-color: var(--accent-color);
+  z-index:999;
+
 }
 
 footer {
@@ -62,14 +68,39 @@ footer {
 }
 
 /* Debug Style  */
-.debug:hover {
+/* .debug:hover {
   background-color: rgba(153, 205, 50, 0.4);
-}
-
-
-
+} */
 
 /* Element Styling  */
+
+.header_bar {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header_bar .logo {
+  max-width: 20%;
+  padding:15px 0;
+}
+
+.header_bar .header_menu ul {
+  color:white;
+  justify-content: center;
+  gap:5px;
+  font-size:.9rem;
+}
+
+.header_bar .shopping_menu ul {
+  color:white;
+  justify-content: center;
+  gap:8px;
+}
+
+.header_bar ul li {
+  cursor: pointer;
+}
+
 .product-grid {
   width:100%;
   flex-wrap: wrap;
@@ -99,7 +130,7 @@ footer {
   background-color: var(--light-color);
   height:10%;
   width:15%;
-  z-index:999;
+  z-index:998;
   top:10px;
   right:0;
 }
@@ -112,7 +143,7 @@ footer {
   vertical-align: center;
   height:5%;
   width:15%;
-  z-index:999;
+  z-index:998;
   bottom:20px;
   left:0;
 }
@@ -131,7 +162,7 @@ footer {
   vertical-align: center;
   height:5%;
   width:30%;
-  z-index:999;
+  z-index:998;
   bottom:20px;
   left:16%;
 }
